--- a/src/main/resources/templates/list-users.html
+++ b/src/main/resources/templates/list-users.html
@@ -18,9 +18,9 @@
 		<div class="card">
 			<div class="card-body">
 				<div th:switch="${users}" class="container my-5">
-					<div class="card bg-primary">
+					<div class="card bg-secondary">
 						<div class="card-body text-center ">
-							<h6 class="card-text text-white">User Management System - User Details</h6>
+							<h6 class="card-text text-white">Check all the users !!</h6>
 						</div>
 					</div>
 					<br>
