changed to in-memory database

--- a/bin/src/main/resources/templates/add-user.html
+++ b/bin/src/main/resources/templates/add-user.html
@@ -22,14 +22,14 @@
                          
                         
                             <div class="form-group col-md-8">
-                                <label for="name" class="col-form-label">Priority</label> 
+                                <label for="name" class="col-form-label">First Name</label> 
                                 <input type="text" th:field="*{firstname}" class="form-control" 
-                                            id="firstname" placeholder="Priority" />
+                                            id="firstname" placeholder="First Name" />
                             </div>
                             <div class="form-group col-md-8">
-                                <label for="name" class="col-form-label">Problem</label> 
+                                <label for="name" class="col-form-label">Last Name</label> 
                                 <input type="text" th:field="*{lastname}" class="form-control" 
-                                            id="lastname" placeholder="Problem" />
+                                            id="lastname" placeholder="Last Name" />
                             </div>
                             <div class="form-group col-md-8">
                                 <label for="email" class="col-form-label">Email</label> 
