--- a/bin/src/main/resources/templates/update-user.html
+++ b/bin/src/main/resources/templates/update-user.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Add User</title>
+    <title>Update User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -13,37 +13,35 @@
 
 <body>
     <div class="container my-5">
-        <h3> Add User</h3>
+        <h3> Update User</h3>
         <div class="card">
             <div class="card-body">
                 <div class="col-md-10">
-                    <form action="#" th:action="@{/api/user/create}" th:object="${user}" method="post">
+                    <form action="#" th:action="@{/api/user/update}" th:object="${user}" method="post">
                         <div class="row">
                          
-                        
-                            <div class="form-group col-md-8">
-                                <label for="name" class="col-form-label">Priority</label> 
-                                <input type="text" th:field="*{firstname}" class="form-control" 
-                                            id="firstname" placeholder="Priority" />
+                         <div class="form-group col-md-8">
+                                <label for="name" class="col-form-label">Id</label> 
+                                <input type="text" readonly="readonly" th:field="*{id}" class="form-control"  id="id" />
                             </div>
                             <div class="form-group col-md-8">
-                                <label for="name" class="col-form-label">Problem</label> 
+                                <label for="name" class="col-form-label">First Name</label> 
+                                <input type="text" th:field="*{firstname}" class="form-control" 
+                                            id="firstname" placeholder="First Name" />
+                            </div>
+                            <div class="form-group col-md-8">
+                                <label for="name" class="col-form-label">Last Name</label> 
                                 <input type="text" th:field="*{lastname}" class="form-control" 
-                                            id="lastname" placeholder="Problem" />
+                                            id="lastname" placeholder="Last Name" />
                             </div>
                             <div class="form-group col-md-8">
                                 <label for="email" class="col-form-label">Email</label> 
                                 <input type="text" th:field="*{email}" class="form-control" 
                                             id="email" placeholder="Email Id" />
                             </div>
-
                             <div class="col-md-6">
                                 <input type="submit" class="btn btn-primary" value=" Submit ">
-                            </div>
-
-                          
-                             
-    
+                            </div>                                                   
                         </div>
                     </form>
                 </div>
